[UI] Fixed UI scaling in the popup, moved some interface items to prevent overlapping.

--- a/lnch-app/client/main.css
+++ b/lnch-app/client/main.css
@@ -64,7 +64,7 @@
   justify-content: center;
   align-items: center;
   position: absolute;
-  padding: 1vh 2vw;
+  padding: 10px;
   top: 0;
   left: 0;
 }
@@ -254,12 +254,12 @@
 .back-button {
   position: absolute;
   right: 0;
-  top: 0;
+  top: 5vh;
   border: 0;
-  padding: 1vh 3vw;
   text-decoration: none;
-  font-family: 'Teko', sans-serif;
-  font-weight: 100;
+}
+
+.back-button i {
   font-size: 2em;
   background: rgba(0,0,0,1);
   color: rgb(255, 151, 13);
@@ -337,6 +337,18 @@
     font-size: 2.5em;
     max-width: 15vw;
   }
+
+  .modal-window {
+    width: 60vw;
+  }
+
+  .modal-window .modal-content #modalTitle {
+    font-size: 2em;
+  }
+
+  .modal-window .modal-content #modalDetails, .modal-window .modal-close {
+    font-size: 1.8em;
+  }
 }
 
 
@@ -365,7 +377,7 @@
 
   .info-bar {
     font-size: 1.2em;
-    top: 0;
+    top: 3vh;
   }
 
   .info-segment, .reroll-button, .nav-button {
@@ -375,19 +387,34 @@
   .reroll-button {
     font-size: 2em;
     padding: 1vh 5vw;
+    left: 0;
   }
 
   .back-button {
-    font-size: 1.6em;
+    top: 8vh;
+  }
+
+  .back-button i {
+    font-size: 2em;
   }
 
   .nav-button {
     font-size: 3em;
-    left: 0;
     max-height: 10vh;
     max-width: 30vw;
     padding: 1vh 10vw;
-    transform: translateX(0%);
-    -webkit-transform: translateX(0%);
+  }
+
+  .modal-window {
+    width: 80vw;
+    height: 40vh;
+  }
+
+  .modal-window .modal-content #modalTitle {
+    font-size: 2em;
+  }
+
+  .modal-window .modal-content #modalDetails, .modal-window .modal-close {
+    font-size: 1.8em;
   }
 }
